Map projections and other improvements
